fixed: file-menu, btn spacing, dropdwn-style, popping-btn

--- a/adventurous-anteaters/style.css
+++ b/adventurous-anteaters/style.css
@@ -19,8 +19,6 @@
   display: none;
   position: absolute;
   background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -38,3 +36,20 @@
   display: block;
 }
 
+button{
+  min-width: 0;
+  background: none;
+  box-shadow: none;
+}
+
+.Frame{
+ 
+    background-color: #bbc3c4;
+    padding: 3px;
+    box-shadow: inset -1px -1px 0px #0c0c0c, inset 1px 1px 0px #bbc3c4, inset -2px -2px 0px #808088, inset 2px 2px 0px #ffffff;
+    
+}
+
+.window-body{
+  margin: 0;
+}
